# seo_content_writer

./: .replit  main.py  pyproject.toml  requirements.txt  test.py
static/: style.css
templates/: index.html  results.html
