[project]
name = "content_generator"
version = "0.1.0"
description = "A web application for generating content based on user-provided topics."
authors = [
  { name = "Darren Huang", email = "darrenhhuang@gmail.com" },
]
dependencies = [
  "aisuites>=0.0.23",
  "requests>=2.31.0",
  "pandas>=2.2.0",
  "python-dotenv>=1.0.1",
  "urllib3>=1.26.7,<3.0",
  "flask>=3.0.2"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black>=23.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true